--- a/templates/index.html
+++ b/templates/index.html
@@ -142,7 +142,7 @@
     <div id="sideNavigation" class="sidenav">
         <a href="#" class="close-btn">&times;</a>
         <a href="/data" style="font-family: 'Roboto', sans-serif;">Data</a>
-        <a href="/date-selection" style="font-family: 'Roboto', sans-serif;">VLF</a>
+{#        <a href="/date-selection" style="font-family: 'Roboto', sans-serif;">VLF</a>#}
         <a href="/equipment" style="font-family: 'Roboto', sans-serif;">Equipment</a>
         <a href="/contacts" style="font-family: 'Roboto', sans-serif;">Contacts</a>
     </div>
@@ -258,9 +258,9 @@
                             color: #f8f6f6;
                         }
                      </style>
-                    <a href="/date-selection" class="btn">
+                    <a href="/data" class="btn">
 {#                       style="font-family: 'Roboto', sans-serif; font-size: 18px; background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">#}
-                        VLF data
+                        Data
                     </a>
                 </div>
             </div>
@@ -278,22 +278,22 @@
                 <div class="icon-square text-bg-light d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
                 </div>
                 <div>
-                    <a href="/data" class="btn">
-{#                       style="font-family: 'Roboto', sans-serif; font-size: 18px; background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">#}
-                        Data
-                    </a>
-                </div>
-            </div>
-            <div class="col d-flex" style="justify-content: center; align-items: center">
-                <div class="icon-square text-bg-light d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-                </div>
-                <div>
                     <a href="/contacts" class="btn">
 {#                       style="font-family: 'Roboto', sans-serif; font-size: 18px; background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">#}
                         Contacts
                     </a>
                 </div>
             </div>
+{#            <div class="col d-flex" style="justify-content: center; align-items: center">#}
+{#                <div class="icon-square text-bg-light d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">#}
+{#                </div>#}
+{#                <div>#}
+{#                    <a href="/contacts" class="btn">#}
+{#                       style="font-family: 'Roboto', sans-serif; font-size: 18px; background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">#}
+{#                        Contacts#}
+{#                    </a>#}
+{#                </div>#}
+{#            </div>#}
         </div>
         <footer class="footer pt-3 mt-4 text-muted border-top"
                 style="font-family: 'Roboto', sans-serif;">
