--- a/templates/base_page.html
+++ b/templates/base_page.html
@@ -148,7 +148,7 @@
     <div id="sideNavigation" class="sidenav">
         <a href="#" class="close-btn">&times;</a>
         <a href="/data" style="font-family: 'Roboto', sans-serif;">Data</a>
-        <a href="/date-selection" style="font-family: 'Roboto', sans-serif;">VLF</a>
+{#        <a href="/date-selection" style="font-family: 'Roboto', sans-serif;">VLF</a>#}
         <a href="/equipment" style="font-family: 'Roboto', sans-serif;">Equipment</a>
         <a href="/contacts" style="font-family: 'Roboto', sans-serif;">Contacts</a>
     </div>
