--- a/templates/data.html
+++ b/templates/data.html
@@ -26,6 +26,7 @@
             width: 70%;
             height: 800px;
             display: flex;
+            text-align: justify;
             {#align-items: stretch;#}
             font-family: 'Roboto', sans-serif;
             box-shadow: 0 0 3px 5px rgba(0, 0, 0, 0.03);
