--- a/templates/data.html
+++ b/templates/data.html
@@ -11,25 +11,27 @@
 <style>
 
         p {
-            line-height: 1.2;
+            line-height: 1.5;
             letter-spacing: .2px;
             font-size: 18px;
         }
 
         h1 {
             font-size: 30px;
+            {#font-size:8vw;#}
             text-align: justify;
         }
 
         .box-container {
             margin: 100px auto;
             width: 70%;
-            height: 800px;
+            height: 950px;
             display: flex;
             text-align: justify;
             {#align-items: stretch;#}
             font-family: 'Roboto', sans-serif;
-            box-shadow: 0 0 3px 5px rgba(0, 0, 0, 0.03);
+            position: relative;
+            {#box-shadow: 0 0 3px 5px rgba(0, 0, 0, 0.03);#}
         }
 
       {#.right-open {#}
@@ -40,12 +42,16 @@
             font-family: 'Roboto', sans-serif;
             {#opacity: 0;#}
             color: #888484;
+            margin: auto;
+            display: block;
+            border-radius: 8px;
         }
 
         .box1-content,
         .box1-side {
           transition: all .3s ease-out;
           color: #5a728a;
+            position: relative;
         }
 
         .box1-content {
@@ -57,41 +63,27 @@
         }
 
         .box1-side {
-            background: #d1d7dc;
-            {#flex: 2;#}
-            width: 200px;
+            width: 160px;
+            float: right;
+            border-radius: 8px;
             display: flex;
             justify-content: center;
             align-items: center;
-            {#align-items: flex-end;#}
             font-family: 'Roboto', sans-serif;
-            {#vertical-align: center;#}
-          {#color: #1a1d20;#}
+            position: relative;
         }
 
         button {
-            {#background: #5a728a;#}
-            {#padding: 15px 50px;#}
-            {#border-radius: 5px;#}
-            {#border: none;#}
-            {#font-family: 'Roboto', sans-serif;#}
-            {#box-shadow: 1px 1px 8px 1px rgba(0, 0, 0, 0.32);#}
-            {#color: white;#}
-            {#margin: 30px 0;#}
             display: inline-flex;
-            {#background: #5a728a;#}
-            background: #d1d7dc;
-            {#width: 150px;#}
-            {#width: 100%;#}
-            {#height: 100%;#}
-            width: 200px;
-            height: 800px;
-            {#height: 45px;#}
+            background: #68819a;
+            {#display: block;#}
+            {#width: 160px;#}
+            width: 10vw;
+            height: 80px;
             color: #ffffff;
             font-size: 50px;
             font-family: 'Roboto', sans-serif;
-            {#border: #68819a;#}
-            border: #d1d7dc;
+            border: #68819a;
             border-radius: 8px;
             margin: auto;
             transition: all 0.2s;
@@ -103,10 +95,12 @@
         .button:hover {
            {#background: #4c6177;#}
            {#background: #cdd6de;#}
-           color: #f8f6f6;
+           background: #576f88;
             transform: scale(1.1);
-            width: 200px;
-            height: 800px;
+            border-radius: 8px;
+            width: 10vw;
+            {#width: 160px;#}
+            height: 80px;
 
         }
 
@@ -115,7 +109,7 @@
                 /*margin: 0 auto auto 0;*/
                 margin: auto;
                 {#max-height: 300px;#}
-                width: 90%;
+                width: 80%;
                 {#max-width: 900px;#}
                 display: block;
                 border-radius: 10px;
@@ -142,15 +136,19 @@
             where lat is latitude, long is longitude and t is UT. Thus the processing of TEC data reproduces the
             well-known technique from ionosonde data processing. As far as NmF2 gives the significant part of TEC then
             TEC variations can be studied and analyzed in the same manner as NmF2 temporal dynamics in ionosonde studies.</p>
-      </div>
-        <div class="box1-side">
+          <div class="box1-side">
             <form method="post" id="tec">
-                <button type="submit" formaction="/date-selection" class="button">⟶</button>
+                <br>
+                <button type="submit" formaction="/date-selection" class="button" style="font-size:3vw;">⟶</button>
                 <input type="hidden" id="source" name="source" value="tec">
             </form>
+          </div>
+      </div>
 {#        <button type="submit" formaction="/date-selection" class="button">⟶</button>#}
         </div>
     </div>
+{#    <br>#}
+{#    <br>#}
     <div class="box-container">
       <div class="box1-content content">
         <h1>VLF Signals</h1>
@@ -159,18 +157,19 @@
         <p>The high sensitive magnetometric systems "Whistler" are installed in Mikhnevo Geophysical Observatory.
             They allow to register signals from VLF stations located around the globe. The site presents the results of
             measuring of the amplitude of signals from the 5 VLF transmitters: JXN, GQD, NAA, DHO, ICV. The "Whistler"
-            characteristics can be found in the Equipment section</p>
-      </div>
-        <div class="box1-side">
+            characteristics can be found in the Equipment section.</p>
+           <div class="box1-side">
             <form method="post" id="vlf">
-                <button type="submit" formaction="/date-selection" class="button">⟶</button>
+                <br>
+                <button type="submit" formaction="/date-selection" class="button" style="font-size:3vw;">⟶</button>
                 <input type="hidden" id="source" name="source" value="vlf">
             </form>
 {#            <form method="post" id="tec">#}
 {#                <button type="submit" formaction="/date-selection" class="button">⟶</button>#}
 {#                <input type="hidden" id="source" name="source" value="tec">#}
 {#            </form>#}
-        </div>
+           </div>
+      </div>
     </div>
 
     <script>
