--- a/templates/base_page.html
+++ b/templates/base_page.html
@@ -32,7 +32,7 @@
             z-index: 1;
             top: 0;
             left: 0;
-            background-color: #5a728a;
+            background-color: #68819a;
             overflow-x: hidden;
             padding-top: 4rem;
             transition: 0.4s cubic-bezier(0.18, 0.89, 0.32, 1.28);
@@ -51,7 +51,7 @@
 
         .sidenav a:hover {
             color: #b2a9a9;
-            background: #5a728a;
+            background: #68819a;
         }
 
         /* Position and style the close button (top right corner) */
@@ -80,10 +80,11 @@
 
         /* Add a black background color to the top navigation */
         .topnav {
-        {#background-color: #316e8d;#} background-color: #5a728a;
+        {#background-color: #316e8d;#} background-color: #68819a;
             overflow: hidden;
             vertical-align: center;
-            align-content: center;
+            {#align-content: center;#}
+            align-items: center;
         }
 
         /* Style the links inside the navigation bar */
@@ -104,7 +105,7 @@
 
         /* Change the color of links on hover */
         .topnav a:hover {
-            background-color: #5a728a;
+            background-color: #68819a;
             color: #5e5b5b;
         }
 
