--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -17,16 +17,16 @@
             .btn {
                 float: right;
                 display: inline-block;
-                background: #c1d1d3;
+                background: #9aa9ab;
                 font-size: 16px;
                 color: #0e0e0e;
                 font-family: 'Roboto', sans-serif;
-                border: #c1d1d3;
+                border: #9aa9ab;
                 border-radius: 10px;
             }
 
             .btn:hover {
-                background: #9aa9ab;
+                background: #8f9a9b;
             }
         </style>
         {#        <a href="/" class="btn" style="float: right;">На главную страницу</a>#}
