--- a/templates/vlf_data.html
+++ b/templates/vlf_data.html
@@ -4,12 +4,6 @@
     VLF data
 {% endblock %}
 
-{% block page-title %}
-{% endblock %}
-
-{% block page-lead %}
-{% endblock %}
-
 {% load static %}
 
 {% block content %}
@@ -29,7 +23,7 @@
             }
 
             .btn:hover {
-                background: #576f88;
+                background: #5c748c;
                 color: #f8f8f8;
             }
         </style>
