--- a/templates/equipment.html
+++ b/templates/equipment.html
@@ -4,140 +4,6 @@
     Equipment
 {% endblock %}
 
-{#{% block content %}#}
-{#    <nav class="navbar navbar-default navbar-fixed-top">#}
-{#        <div class="container-fluid" id="header">#}
-{#            <div id="top-banner" class="row xs-hidden">#}
-{#                <div class="container">#}
-{#                    <img id="image-emb" src="../img/emb.png">#}
-{#                    <p id="name">Geophysical Observatory Mikhnevo</p>#}
-{#                </div>#}
-{#            </div>#}
-{#            <div id="navbar-header-wrapper" class="container">#}
-{#                <div class="navbar-header">#}
-{#                    <button id="menu-button" type="button" class="navbar-toggle" data-toggle="collapse"#}
-{#                            data-target="#header-nav">#}
-{#                        <span class="icon-bar"></span>#}
-{#                        <span class="icon-bar"></span>#}
-{#                        <span class="icon-bar"></span>#}
-{#                    </button>#}
-{#                </div>#}
-{#                <div class="collapse navbar-collapse" id="header-nav">#}
-{#                    <ul class="nav nav-justified">#}
-{#                        <li><a href="index.html">HOME</a></li>#}
-{#                        <li><a href="data.html">DATA</a></li>#}
-{#                        <li><a href="equipment.html" class="active">EQUIPMENT</a></li>#}
-{#                        <li><a href="contacts.html">CONTACTS</a></li>#}
-{#                    </ul>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#    </nav>#}
-{##}
-{#    <div id="main">#}
-{##}
-{#    <div class="container-fluid" id="first">#}
-{#        <div class="row">#}
-{#            <div class="container">#}
-{#                <h1>Median TEC</h1><br>#}
-{#                <div id="TEC_picture">#}
-{#                </div>#}
-{#                <p>To calculate the variations of TEC value on one day we used the data of the Madrigal system capable#}
-{#                    of managing and serving archival and real-time data from a wide range of ground-based instruments#}
-{#                    (http://www.openmadrigal.org/). The TEC data is a diurnal file containing the values of TEC for#}
-{#                    different geographic points with a time step of 5 minutes. These data were averaged by a 15-minute#}
-{#                    window and distributed along a 180x360 grid in one-degree increments. For each time moment, the#}
-{#                    median value of TEC (TECmed) was calculated for the 27 previous days. The TEC deviation from the#}
-{#                    median value (∂TEC) was calculated by the formula:<br><br>#}
-{##}
-{#                    ∂TEC (lat, long, t) = (TEC (lat, long, t) - TECmed (lat, long, t))/ TECmed (lat, long, t),<br><br>#}
-{##}
-{#                    where lat is latitude, long is longitude and t is UT. Thus the processing of TEC data reproduces the#}
-{#                    well-known technique from ionosonde data processing. As far as NmF2 gives the significant part of#}
-{#                    TEC then TEC variations can be studied and analyzed in the same manner as NmF2 temporal dynamics in#}
-{#                    ionosonde studies.</p>#}
-{#                <div class="data">#}
-{#                    <p>BROWSE DATA</p>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#    </div>#}
-{##}
-{#    <div class="container-fluid" id="second">#}
-{#        <div class="row">#}
-{#            <div class="container">#}
-{#                <h1>VLF Signals</h1><br>#}
-{#                <div id="map_picture">#}
-{#                </div>#}
-{#                <p>The high sensitive magnetometric systems "Whistler" are installed in Mikhnevo Geophysical#}
-{#                    Observatory. They allow to register signals from VLF stations located around the globe. The site#}
-{#                    presents the results of measuring of the amplitude of signals from the 5 VLF transmitters: JXN, GQD,#}
-{#                    NAA, DHO, ICV. The "Whistler" characteristics can be found in the Equipment section.</p>#}
-{#                <div class="data">#}
-{#                    <p>BROWSE DATA</p>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#    </div>#}
-{##}
-{#    <div class="container-fluid" id="third">#}
-{#        <div class="row">#}
-{#            <div class="container">#}
-{#                <h1>GNSS</h1><br>#}
-{#                <p>The Observatory complex for measurement of the ionosphere parameters includes three GNSS#}
-{#                    receivers:<br>#}
-{#                    <br>- Javad Sigma#}
-{#                    <br>- Javad Prego#}
-{#                    <br>- Trimble 5700#}
-{#                    <br><br>#}
-{#                    All receivers (with a sampling rate of 1 second). The raw data is saved in the Rinex 3.02 format.#}
-{#                    Based on the results of the measurements, the variations of the TEC for each satellite-receiver beam#}
-{#                    are calculated.</p>#}
-{#                <div class="col-md-4">#}
-{#                    <div class="box">#}
-{#                        <h2>Javad Sigma</h2>#}
-{#                        <hr>#}
-{#                        <p>latitude: 54°57´<br>#}
-{#                            longitude: 37°46´<br><br>#}
-{#                            - GPS L1/L2/L5<br>#}
-{#                            - GLONASS L1/L2<br>#}
-{#                            - SBAS L1/L5<br>#}
-{#                            - 1 Hz update rate</p>#}
-{#                        <div class="data">#}
-{#                            <p>BROWSE DATA</p>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="col-md-4">#}
-{#                    <div class="box">#}
-{#                        <h2>Javad Prego</h2>#}
-{#                        <hr>#}
-{#                        <p>latitude: 54°57´<br>#}
-{#                            longitude: 37°46´<br><br>#}
-{#                            - GPS L1/L2/L5<br>#}
-{#                            - 1 Hz update rate</p>#}
-{#                        <div class="data">#}
-{#                            <p>BROWSE DATA</p>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="col-md-4">#}
-{#                    <div class="box">#}
-{#                        <h2>Trimble 5700</h2>#}
-{#                        <hr>#}
-{#                        <p>latitude: 54°57´<br>#}
-{#                            longitude: 37°46´<br><br>#}
-{#                            - GPS L1/L2/L5<br>#}
-{#                            - 1 Hz update rate</p>#}
-{#                        <div class="data">#}
-{#                            <p>BROWSE DATA</p>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#    </div>#}
-{#{% endblock %}#}
 
 {% block content %}
     <div class="container px-4 py-5" id="main-contents">
@@ -209,7 +75,7 @@
             }
 
             .btn:hover {
-                background: #576f88;
+                background: #5c748c;
                 color: #f8f6f6;
             }
         </style>
