--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,8 @@
             z-index: 1;
             top: 0;
             left: 0;
-            background-color: #5a728a;
+            background-color: #68819a;
+            {#background-color: #5a728a;#}
             overflow-x: hidden;
             padding-top: 4rem;
             transition: 0.4s cubic-bezier(0.18, 0.89, 0.32, 1.28);
@@ -45,7 +46,8 @@
 
         .sidenav a:hover {
             color: #b2a9a9;
-            background: #5a728a;
+            background: #68819a;
+            {#background-color: #5a728a;#}
         }
 
         /* Position and style the close button (top right corner) */
@@ -74,7 +76,8 @@
 
         /* Add a black background color to the top navigation */
         .topnav {
-        {#background-color: #316e8d;#} background-color: #5a728a;
+        {#background-color: #316e8d;#} background-color: #68819a;
+            {#background-color: #5a728a;#}
             overflow: hidden;
             vertical-align: center;
             align-content: center;
@@ -98,7 +101,8 @@
 
         /* Change the color of links on hover */
         .topnav a:hover {
-            background-color: #5a728a;
+            background-color: #68819a;
+            {#background-color: #5a728a;#}
             color: #5e5b5b;
         }
 
