--- a/templates/date_selection.html
+++ b/templates/date_selection.html
@@ -33,10 +33,11 @@
                 color: #f8f8f8;
             }
         </style>
-        <form method="post" id="date_form">
+{#        <form method="post" id="date_form">#}
 {#        <a href="/date-selection" class="btn">Back to date picker</a>#}
-            <input class="btn" type="submit" formaction="/data" value="To data selection">
-        </form>
+        <a href="/data" class="btn" style="float: left;">To data selection</a>
+{#            <input class="btn" type="submit" formaction="/data" value="To data selection">#}
+{#        </form>#}
         <a href="/" class="btn" style="float: right;">To Home Page</a>
     </div>
     <br>
